# tree-sitter-snake

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  binding.gyp  example-file.adder  example-file.boa  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-adder.pc.in  tree-sitter-snake.pc.in
bindings/c/tree_sitter/: tree-sitter-adder.h  tree-sitter-snake.h
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_adder/: __init__.py  binding.c
bindings/python/tree_sitter_snake/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
