[package]
name = "tree-sitter-snake"
description = "Snake grammar for tree-sitter"
version = "1.0.1"
authors = ["Neven Johnson <neven@umich.edu>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "snake"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/nevenjohnson/tree-sitter-snake"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
